[package]
name = "om-wikiparser"
version = "0.0.0"
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/organicmaps/wikiparser/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
