[package]
name = "om-wikiparser"
version = "0.0.0"
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/organicmaps/wikiparser/"
default-run = "om-wikiparser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.2", features = ["derive"] }
csv = "1.2.2"
ego-tree = "0.6.2"
env_logger = "0.10.0"
log = "0.4.18"
once_cell = "1.18.0"
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
url = "2.3.1"
urlencoding = "2.1.2"

[profile.release]
debug = true
overflow-checks = true
